# Schemify

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT-MAP.md  Cargo.toml  Config.toml  FIX.md  HANDOFF.md  ISSUES.md  PLAN.md  README.md  TODO.md  build.zig  build.zig.zon  flake.nix  result  shell.nix
crates/agent/: Cargo.toml
crates/agent/skill/: CONTEXT.md  REFERENCE.md  SKILL.md
crates/agent/src/: lib.rs  local.rs  protocol.rs  socket.rs  zinc.rs
crates/agent/src/server/: mod.rs  query.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/primitives/: inout_pin.chn_prim  output_pin.chn_prim  pmos.chn_prim  pnp.chn_prim  vcvs.chn_prim
crates/core/src/: commands.rs  config.rs  devices.rs  handler.rs  lib.rs  marshal.rs  plugin_types.rs  primitives.rs  schematic.rs  schemify.rs  simulation.rs  theme.rs  traits.rs  types.rs
crates/core/src/handler/: app.rs  connectivity.rs  hit_test.rs  io.rs  mod.rs  tests.rs  transform.rs
crates/core/src/schemify/: chn.rs  command.rs  mod.rs  model.rs  prims.rs
crates/core/src/sim/: codegen.rs  ir.rs  ir_emit.rs  mod.rs  runner.rs  stimulus.rs
crates/display/: Cargo.toml  README.md  TODO.md
crates/display/src/: canvas.rs  chrome.rs  command_bar.rs  context_menu.rs  dialogs.rs  doc_view.rs  file_explorer.rs  handler.rs  highlight.rs  keybinds.rs  lib.rs  library_browser.rs  main.rs  math_render.rs  menu_bar.rs  optimizer_view.rs  panels.rs  plugin_host.rs  plugin_panels.rs  slot_renderer.rs  state.rs  status_bar.rs  tab_bar.rs  theme.rs  theme_bridge.rs  toolbar.rs  ui.rs  wave_view.rs  web.rs  welcome.rs
crates/display/src/canvas/: geometry.rs  grid.rs  interact.rs  interaction.rs  mod.rs  overlays.rs  palette.rs  preview.rs  render.rs  viewport.rs
crates/display/src/components/: chrome.rs  context_menu.rs  doc_view.rs  explorer.rs  menus.rs  mod.rs  plugin_panels.rs
crates/display/src/dialogs/: find.rs  import.rs  mod.rs  new_primitive.rs  properties.rs  settings.rs  spice_code.rs
crates/editor/: Cargo.toml
crates/editor/src/: config.rs  waveform.rs
crates/editor/src/handler/: io.rs  netlist.rs  tests.rs  transform.rs  undo.rs
crates/editor/src/schemify/: mod.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: main.rs  plugin_cli.rs
crates/handler/: Cargo.toml  README.md  build.rs
crates/handler/benches/: connectivity.rs  soa_iteration.rs  spice_parse.rs
crates/handler/src/: connectivity.rs  dispatch.rs  examples.rs  geometry.rs  ir.rs  lib.rs  netlist.rs  plugin_dist.rs  spice_import.rs  state.rs  transform.rs
crates/handler/src/s2s/: adapter.rs  mod.rs  shared.rs
crates/handler/tests/: cross_backend_roundtrip.rs  hierarchical_import.rs  schemify_roundtrip.rs  spice_import.rs  spice_roundtrip.rs  xschem_roundtrip.rs
crates/handler/tests/fixtures/: basic__rc_integrator.spice  basic__rc_lowpass.spice  basic__rl_highpass.spice  basic__rlc_bandpass.spice  basic__voltage_divider.spice  basic__wheatstone_bridge.spice  bjt__bjt_current_mirror.spice  bjt__bjt_diff_pair.spice  bus__bus_8bit_dac.spice  (+48 more)
crates/io/: Cargo.toml  README.md
crates/io/benches/: chn_roundtrip.rs
crates/io/src/: config.rs  lib.rs  lock.rs  paths.rs  reader.rs  stimulus.rs  virtual_fs.rs  writer.rs
crates/mcp/: Cargo.toml
crates/mcp/skill/: REFERENCE.md  SKILL.md
crates/mcp/src/: lib.rs  query.rs
crates/plugins/: Cargo.toml  README.md
crates/plugins/src/: capability.rs  host.rs  jsonrpc.rs  lib.rs  manager.rs  manifest.rs  protocol.rs  runtime.rs  sdk.rs
crates2/mcp/: Cargo.toml
crates2/mcp/src/: lib.rs
crates2/plugin-host/: Cargo.toml
crates2/plugin-host/src/: lib.rs  manifest.rs
crates2/sim/: Cargo.toml
crates2/sim/src/: ir_emit.rs  pdk.rs  stimulus.rs
dep/PySpice/: .gitignore  Cargo.toml  flake.nix
dep/PySpice/examples/: 01_voltage_divider.py  02_rc_lowpass.py  03_bjt_amplifier.py  04_cmos_inverter.py  05_opamp_inverting.py  06_rlc_bandpass.py  07_diode_rectifier.py  08_differential_pair.py  09_current_mirror.py  10_ring_oscillator.py  ac_coupled_amplifier.py  diode_characteristic.py  low_pass_rc_filter.py  nmos_characteristic.py  rectification.py  rlc_filter.py  thevenin_norton.py  voltage_current_divider.py
dep/PySpice/nix/: ngspice.nix  openvaf.nix  xyce.nix
dep/PySpice/python/: pyproject.toml
dep/PySpice/src/: cabi.rs  circuit.rs  lib.rs  lint.rs  measure_parse.rs  psf.rs  python.rs  rawfile.rs  result.rs  simulation.rs  unit.rs
dep/PySpice/tests/: test_backends.rs  test_circuit.rs  test_python_circuit.py  test_python_examples.py  test_python_lint.py  test_python_netlist.py  test_python_simulator.py  test_python_units.py  test_simulation.rs  test_unit.rs
marketplace/: Cargo.toml
marketplace/src/: install.rs  lib.rs  platform.rs  registry.rs
plugins/CCreator/: Makefile  export_schematics.py  flake.nix  plugin.toml  pyproject.toml  run_tests.py
plugins/CCreator/docs/: api-reference.md  builtin-library.md  circuits.md  optimization.md  overview.md  pdk-switching.md  schemify-export.md  testbenches.md
plugins/CCreator/src/: plugin.py
plugins/GMIDOptimizer/: .gitignore  Makefile  flake.nix  plugin.toml  pyproject.toml
plugins/GMIDOptimizer/src/: plugin.py
plugins/PDKSwitcherino/: Makefile  flake.nix  plugin.toml  pyproject.toml
plugins/PDKSwitcherino/docs/: how-it-works.md
plugins/PDKSwitcherino/src/: plugin.py
plugins/PDKSwitcherino/test/: opamp_sky130.spice  opamp_sky130_longL.spice  test_pdk_switch.py
plugins/gmid-lut/GmIDVisualizer/: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  main.cpp
plugins/pdk-switcher/: Cargo.toml  plugin.toml
plugins/pdk-switcher/manifests/: ihp-sg13g2.toml
plugins/pdk-switcher/src/: families.rs  installer.rs  main.rs  remote.rs  sink.rs  view.rs
plugins/theme-registry/: Cargo.toml  plugin.toml  theme_state.json
plugins/theme-registry/src/: main.rs  mapping.rs  registry.rs
sdk/python/: README.md  pyproject.toml  schemify_plugin.py
sdk/python/template/: plugin.toml
tools/api/c/: CMakeLists.txt  Makefile
tools/api/cpp/: CMakeLists.txt  Makefile
tools/api/python/: Makefile  bridge.c  pyproject.toml
(+2424 files in other folders)
