[workspace]
members = [
    "crates/agent",
    "crates/editor",
    "crates/gui",
    "crates/net2schem",
    "crates/optimizer",
    "crates/plugin-api",
    "crates/plugin-host",
    "crates/schematic",
    "crates/sim",
    "crates/wave",
]
exclude = [
    "plugins/theme-registry",
    "plugins/pdk-switcher",
    "plugins/gmid-lut",
    "plugins/pdk-mapper",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
lasso = "0.7"
rustc-hash = "2"
toml = "0.8"
cktimg = { git = "https://github.com/OmarSiwy/cktImg" }
cktimg-svg = { git = "https://github.com/OmarSiwy/cktImg" } # dev-only: fixture gallery reference renders

[package]
name = "schemify"
version.workspace = true
edition.workspace = true

[[bin]]
name = "schemify"
path = "src/main.rs"

[dependencies]
schemify-editor = { path = "crates/editor" }
schemify-net2schem = { path = "crates/net2schem" }
schemify-gui = { path = "crates/gui" }
schemify-agent = { path = "crates/agent" }
schemify-plugin-host = { path = "crates/plugin-host" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
