[package]
name = "schemify-marketplace"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-plugins = { path = "../crates/plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
ureq = "3"
flate2 = "1"
tar = "0.4"
semver = { version = "1", features = ["serde"] }
