[package]
name = "schemify-core"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-wave = { path = "../../crates2/wave" }
schemify-optimizer = { path = "../../crates2/optimizer" }
schemify-schematic = { path = "../../crates2/schematic" }
lasso = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
toml = { workspace = true }
dirs = "5"
