[package]
name = "schemify-display"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemify-core = { path = "../core" }
schemify-handler = { path = "../handler" }
schemify-io = { path = "../io" }
eframe = "0.31"
egui = "0.31"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Headers",
    "HtmlCanvasElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
