[package]
name = "schemify-display"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemify-core = { path = "../core" }
schemify-optimizer = { path = "../optimizer" }
schemify-plugins = { path = "../plugins" }
schemify-mcp = { path = "../mcp" }
schemify-marketplace = { path = "../../marketplace" }
eframe = { version = "0.31", default-features = false, features = [
    "accesskit", "default_fonts", "wgpu", "wayland", "x11",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["svg", "image"] }
log = "0.4"
serde_json = { workspace = true }
ratex-render = { version = "0.1.11", features = ["embed-fonts"] }
ratex-parser = "0.1.11"
ratex-layout = "0.1.11"
ratex-types = "0.1.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
