[package]
name = "schemify-editor"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-wave = { path = "../wave" }
schemify-optimizer = { path = "../optimizer" }
schemify-schematic = { path = "../schematic" }
schemify-sim = { path = "../sim" }
lasso = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
toml = { workspace = true }
dirs = "5"
