[package]
name = "schemify-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schemify"
path = "src/main.rs"

[dependencies]
schemify-core = { path = "../core" }
schemify-handler = { path = "../handler" }
schemify-display = { path = "../display" }
schemify-io = { path = "../io" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
