[package]
name = "schemify-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
schemify-core = { path = "../core" }
schemify-io = { path = "../io" }
schemify-sim = { path = "../sim" }
anyhow = "1"
thiserror = "2"
lasso = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spice_parse"
harness = false

[[bench]]
name = "connectivity"
harness = false

[[bench]]
name = "soa_iteration"
harness = false
