[package]
name = "schemify-io"
version = "0.1.0"
edition = "2021"

[dependencies]
schemify-core = { path = "../core" }
lasso = "0.7"
dirs = "5"
serde = { workspace = true }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chn_roundtrip"
harness = false
