[package]
name = "schemify-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-core = { path = "../core" }
schemify-net2schem = { path = "../net2schem" }
schemify-wave = { path = "../../crates2/wave" }
schemify-plugins = { path = "../plugins" }
schemify-marketplace = { path = "../../marketplace" }
serde_json = { workspace = true }
anyhow = { workspace = true }
