[package]
name = "schemify-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-editor = { path = "../../crates2/editor" }
schemify-net2schem = { path = "../net2schem" }
schemify-wave = { path = "../../crates2/wave" }
schemify-plugin-host = { path = "../../crates2/plugin-host" }
serde_json = { workspace = true }
anyhow = { workspace = true }
