[package]
name = "schemify-plugins"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["wasmtime"]

[dependencies]
schemify-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dependencies.wasmtime]
version = "30"
optional = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
