[package]
name = "schemify-plugin-host"
version.workspace = true
edition.workspace = true

[dependencies]
schemify-plugin-api = { path = "../plugin-api" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
ureq = "3"
flate2 = "1"
tar = "0.4"
semver = { version = "1", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
