[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "schemify-gmid-optimizer"
version     = "0.1.0"
description = "Schemify GMIDOptimizer plugin — Bayesian gm/Id circuit optimizer"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pyspice",
    "botorch",
    "gpytorch",
    "torch",
    "scikit-learn",
    "matplotlib",
]
