[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "schemify-pdk-switcherino"
version     = "0.1.0"
description = "Schemify PDKSwitcherino plugin — cross-PDK circuit remapping"
requires-python = ">=3.11"
dependencies = [
    "PySpice>=1.5",
    "numpy",
    "scipy",
]
