[package]
name = "pdk-switcher-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdk-switcher"
path = "src/main.rs"

[dependencies]
schemify-plugin-api = { path = "../../crates/plugin-api" }
serde_json = "1"
ureq = "3"
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
toml_edit = "0.22"
dirs = "6"

[profile.release]
opt-level = 2
