[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schemify-plugin"
version = "0.1.0"
description = "Python SDK for Schemify plugins (JSON-RPC 2.0 over stdin/stdout)"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["schemify_plugin"]

[tool.setuptools.packages.find]
exclude = ["template*"]
